--- a/.config/nvim/stylua.toml
+++ b/.config/nvim/stylua.toml
@@ -1,4 +1,6 @@
-column_width = 120
+column_width = 110
 line_endings = "Unix"
 quote_style = "AutoPreferDouble"
 no_call_parentheses = true
+indent_type = "Spaces"
+indent_width = 2
