--- a/.config/k9s/config.yml
+++ b/.config/k9s/config.yml
@@ -24,6 +24,7 @@ k9s:
         active: all
         lockFavorites: false
         favorites:
+        - all
         - default
       view:
         active: sensor
