rename some folders

--- a/.config/aerc/accounts.conf
+++ b/.config/aerc/accounts.conf
@@ -1,6 +1,6 @@
 [Fastmail]
-source             = notmuch://~/.mail/fastmail
-maildir-store      = ~/.mail/fastmail
+source             = notmuch://~/Mail/fastmail
+maildir-store      = ~/Mail/fastmail
 check-mail-cmd     = ~/.scripts/sync-mail
 check-mail-timeout = 60s
 default            = INBOX
