--- a/.notmuch-config
+++ b/.notmuch-config
@@ -1,5 +1,5 @@
 [database]
-path=/Users/christoph/.mail/fastmail
+path=/Users/christoph/Mail/fastmail
 
 [user]
 primary_email=christoph@medium.place
