--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,12 +1,12 @@
 [shell]
-program = "/opt/homebrew/bin/zellij"
+program = "/opt/homebrew/bin/fish"
 
 [env]
 TERM = "xterm-256color"
 
 [font]
-size = 15
-normal = { family = "Iosevka Nerd Font", style = "Regular" }
+size = 14
+normal = { family = "CommitMono", style = "Regular" }
 
 [window]
 option_as_alt = "Both"
