--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -1,5 +1,5 @@
 {
-  "theme": "Catppuccin Latte - No Italics",
+  "theme": "Catppuccin Macchiato - No Italics",
   "ui_font_family": "CommitMono",
   "ui_font_size": 16,
   "buffer_font_family": "CommitMono",
@@ -29,9 +29,6 @@
   "git": {
     "inline_blame": { "enabled": false }
   },
-  "inlay_hints": {
-    "enabled": true
-  },
   "features": {
     "inline_completion_provider": "supermaven"
   },
@@ -44,34 +41,26 @@
   },
   "languages": {
     "Elixir": {
-      "language_servers": ["lexical", "!elixir-ls", "!next-ls"],
-      "format_on_save": {
-        "external": {
-          "command": "mix",
-          "arguments": ["format", "--stdin-filename", "{buffer_path}", "-"]
-        }
-      }
+      "language_servers": ["lexical", "!elixir-ls", "!next-ls"]
     },
     "TypeScript": {
       "formatter": {
         "code_actions": {
-          "source.fixAll.eslint": true
+          "source.fixAll.eslint": true,
+          "source.organizeImports": true
         }
       }
     },
     "TSX": {
       "formatter": {
         "code_actions": {
-          "source.fixAll.eslint": true
+          "source.fixAll.eslint": true,
+          "source.organizeImports": true
         }
       }
-    }
-  },
-  "lsp": {
-    "elixir-ls": {
-      "settings": {
-        "dialyzerEnabled": false
-      }
+    },
+    "YAML": {
+      "enable_language_server": false
     }
   },
   "telemetry": {
