--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,7 +6,7 @@ TERM = "xterm-256color"
 
 [font]
 size = 15
-normal = { family = "CommitMono", style = "Regular" }
+normal = { family = "CommitMono Nerd Font", style = "Regular" }
 
 [window]
 option_as_alt = "Both"
