--- a/.config/git/config
+++ b/.config/git/config
@@ -46,19 +46,30 @@
   difftool = true
 
 [delta]
-  navigate = true
-  light = true
-  minus-style                   = syntax "#dfccd4"
-  minus-non-emph-style          = syntax "#dfccd4"
-  minus-emph-style              = syntax "#d99ea2"
-  minus-empty-line-marker-style = syntax "#dfccd4"
-  line-numbers-minus-style      = "#c25d64"
-  plus-style                    = syntax "#aecde6"
-  plus-non-emph-style           = syntax "#aecde6"
-  plus-emph-style               = syntax "#57a7bc"
-  plus-empty-line-marker-style  = syntax "#aecde6"
-  line-numbers-plus-style       = "#399a96"
-  line-numbers-zero-style       = "#a8aecb"
+	blame-palette = "#24273a #1e2030 #181926 #363a4f #494d64"
+	commit-decoration-style = box ul
+	dark = true
+	file-decoration-style = "#cad3f5"
+	file-style = "#cad3f5"
+	hunk-header-decoration-style = box ul
+	hunk-header-file-style = bold
+	hunk-header-line-number-style = bold "#a5adcb"
+	hunk-header-style = file line-number syntax
+	line-numbers-left-style = "#6e738d"
+	line-numbers-minus-style = bold "#ed8796"
+	line-numbers-plus-style = bold "#a6da95"
+	line-numbers-right-style = "#6e738d"
+	line-numbers-zero-style = "#6e738d"
+	minus-emph-style = bold syntax "#563f51"
+	minus-style = syntax "#383143"
+	plus-emph-style = bold syntax "#455450"
+	plus-style = syntax "#313943"
+	map-styles = \
+		bold purple => syntax "#4d4569", \
+		bold blue => syntax "#3e4868", \
+		bold cyan => syntax "#3f5364", \
+		bold yellow => syntax "#575253"
+	syntax-theme = Catppuccin Macchiato
 
 [rerere]
 	enabled = true
