--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,26 +1,27 @@
 gui:
   theme:
     activeBorderColor:
-      - "#8839ef"
+      - "#8aadf4"
       - bold
     inactiveBorderColor:
-      - "#6c6f85"
+      - "#a5adcb"
     optionsTextColor:
-      - "#1e66f5"
+      - "#8aadf4"
     selectedLineBgColor:
-      - "#ccd0da"
-    selectedRangeBgColor:
-      - "#ccd0da"
+      - "#363a4f"
     cherryPickedCommitBgColor:
-      - "#bcc0cc"
+      - "#494d64"
     cherryPickedCommitFgColor:
-      - "#8839ef"
+      - "#8aadf4"
     unstagedChangesColor:
-      - "#d20f39"
+      - "#ed8796"
     defaultFgColor:
-      - "#4c4f69"
+      - "#cad3f5"
     searchingActiveBorderColor:
-      - "#df8e1d"
+      - "#eed49f"
+  authorColors:
+    "*": "#b7bdf8"
+
 git:
   paging:
     colorArg: always
