--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -28,7 +28,7 @@ macos_option_as_alt both
 map ctrl+shift+p     launch --type=tab --allow-remote-control fish -c kt
 map ctrl+shift+c     combine : clear_terminal scrollback active : send_text normal \x0c
 map ctrl+shift+enter new_window_with_cwd
-map ctrl+shift+alt+t new_tab_with_cwd !neighbor
+map ctrl+shift+t     new_tab_with_cwd !neighbor
 map ctrl+shift+1     goto_tab 1
 map ctrl+shift+2     goto_tab 2
 map ctrl+shift+3     goto_tab 3
