--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -43,4 +43,4 @@ map ctrl+shift+6     goto_tab 6
 map ctrl+shift+7     goto_tab 7
 
 # Theme
-include catppuccin-macchiato.conf
+include catppuccin-latte.conf
